Fixed cancel link to align with GOV.UK Design System 3

--- a/shared_assets/lite-frontend/scss/components/form/_cancel-link.scss
+++ b/shared_assets/lite-frontend/scss/components/form/_cancel-link.scss
@@ -1,4 +1,4 @@
-.cancel-link {
+.lite-cancel-link {
 	position: relative;
 	@include govuk-typography-responsive($size: 16);
 	@include govuk-link-common;
@@ -8,26 +8,23 @@
 	text-decoration: none;
 	float: right;
 	color: govuk-colour("red")!important;
-	border-bottom: 1px solid govuk-colour("red");
-	padding-left: 18px;
+	border-bottom: 1px solid currentColor;
+	line-height: 12px;
 
-	&:hover {
-		filter: brightness(1.3);
+	svg {
+		width: 12px;
+		height: 12px;
+		margin-right: 2px;
+		* {
+			fill: currentColor;
+		}
 	}
 
-	&:before {
-		content: "";
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		width: 18px;
-		background-image: url("/assets/images/delete_application.svg");
-		background-position: 0px 3px;
-		background-size: 12px 12px;
-		background-repeat: no-repeat;
-		border: none;
-		-webkit-clip-path: none;
-		clip-path: none;
+	&:hover {
+		color: darken(govuk-colour("red"), 10%)!important;
+	}
+
+	&:active {
+		color: darken(govuk-colour("red"), 20%)!important;
 	}
 }
